🚧 ADD: SE añadio el Maestro Tipo de Discapacidad
Se comenzo este maestro para luego implementarcelo a los demás pero, le
falta la busqueda y la paginación

Issue: #4

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/Home.js": "/Home.js",
+    "/Type Discapacity.js": "/Type Discapacity.js",
+    "/Routes.js": "/Routes.js"
 }
