✨ADD: Listo Alergia
Se añadio alergia con Vuejs, y se modifico el controlador y el modelo

Issue: #4

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,9 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/Routes.js": "/Routes.js"
+    "/Route-0.js": "/Route-0.js",
+    "/Route-0~Route-1~Route-3~Route-4.js": "/Route-0~Route-1~Route-3~Route-4.js",
+    "/Route-1.js": "/Route-1.js",
+    "/Route-3.js": "/Route-3.js",
+    "/Route-4.js": "/Route-4.js"
 }
