✨ADD: Pagina de Error
Cuando no pongan la seccion correctamente en la url se redigira a esta
pagina

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/Error.js": "/Error.js",
     "/alergia.js": "/alergia.js",
     "/alergia~cargo~discapacidad~estado~tipoAlergia~tipoDiscapacidad.js": "/alergia~cargo~discapacidad~estado~tipoAlergia~tipoDiscapacidad.js",
     "/cargo.js": "/cargo.js",
